@@ -24,12 +24,12 @@ repositories {
 dependencies {
     compile 'org.apache.commons:commons-dbcp2:2.9.0'
     compile 'commons-net:commons-net:3.8.0'
-    compile 'org.apache.logging.log4j:log4j-api:2.17.2'
-    compile 'org.apache.logging.log4j:log4j-core:2.17.2'
+    compile 'org.apache.logging.log4j:log4j-api:2.18.0'
+    compile 'org.apache.logging.log4j:log4j-core:2.18.0'
     compile 'org.apache.httpcomponents:httpclient:4.5.13'
-    compile 'com.oracle.database.jdbc:ojdbc8:19.14.0.0'
-    compile 'org.springframework:spring-beans:5.3.13'
-    compile 'org.springframework:spring-jdbc:5.3.13'
+    compile 'com.oracle.database.jdbc:ojdbc8:21.1.0.0'
+    compile 'org.springframework:spring-beans:5.3.14'
+    compile 'org.springframework:spring-jdbc:5.3.14'
 
     compile fileTree(dir: 'lib', include: '*.jar')
 }
